# comskip

./: .gitignore  ChangeLog  INSTALL  Makefile.am  bootstrap  comskip.c  comskip.h  config.h  config.h.in  configure  configure.ac  index.html  mpeg2dec.c  params.json  settings.c  settings.h  video_out_dx.c
misc/: comskip.ini  comskip_wrapper.sh
